# minibash

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.c  test.c  test2.c  test3.c  test3.cpp  test4.c
Vector/include/: Vector.h
Vector/src/: Vector.c
include/: Command.h  ConstVariable.h  Executable.h  Process.h  Vector.h  executable.h
lib/: Command.h  Executable.h
runningProgram/: debug  run  san
src/: Command.c  Executable.c  Process.c  Vector.c  executable.c
test/: main.c
